--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# Database settings
 
+# FOR LOCAL DB ENV
+spring.datasource.platform=MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/tododb?createDatabaseIfNotExist=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=Turkey&allowPublicKeyRetrieval=true&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=merhaba
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#Jpa Settings
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
